--- a/public/landing_page/index.html
+++ b/public/landing_page/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -65,7 +65,7 @@
           <div class="hero-buttons">
             <button class="btn-primary" id="signup-btn">
               <i class="fas fa-user-plus"></i>
-              Sign Up Free
+              Sign Up for Free
             </button>
             <button class="btn-secondary" id="signin-btn">
               <i class="fas fa-sign-in-alt"></i>
@@ -75,11 +75,11 @@
           <div class="hero-stats">
             <div class="stat-item">
               <i class="fas fa-users"></i>
-              <span>10,000+ Active Users</span>
+              <span>100+ Active Users</span>
             </div>
             <div class="stat-item">
               <i class="fas fa-calendar-check"></i>
-              <span>500+ Events Daily</span>
+              <span>20+ Events Daily</span>
             </div>
           </div>
         </div>
@@ -256,29 +256,41 @@
         <div class="preview-content">
           <div class="tab-content active" id="home">
             <div class="preview-mockup">
-              <h4>Home Feed</h4>
-              <p>Stay updated with events from your personalized feed</p>
+              <img
+                src="/artifacts/8_home_page.png"
+                alt="Home Feed Preview Image"
+                class="preview-image"
+              />
             </div>
           </div>
 
           <div class="tab-content" id="explore">
             <div class="preview-mockup">
-              <h4>Explore Map</h4>
-              <p>Discover events and people around you</p>
+              <img
+                src="/artifacts/10_location_based_popup.png"
+                alt="Explore Map Preview Image"
+                class="preview-image"
+              />
             </div>
           </div>
 
           <div class="tab-content" id="profile">
             <div class="preview-mockup">
-              <h4>Profile</h4>
-              <p>Connect and communicate instantly</p>
+              <img
+                src="/artifacts/17_event_details_1.png"
+                alt="Event Details Preview Image"
+                class="preview-image"
+              />
             </div>
           </div>
 
           <div class="tab-content" id="suggestions">
             <div class="preview-mockup">
-              <h4>Event Suggestions</h4>
-              <p>Get personalized suggestions for events to attend</p>
+              <img
+                src="/artifacts/8_home_page.png"
+                alt="Event Suggestions Preview Image"
+                class="preview-image"
+              />
             </div>
           </div>
         </div>
@@ -439,7 +451,9 @@
         <div class="footer-bottom">
           <p>
             &copy; 2025 EventHive. All rights reserved. • Contact:
-            <a href="mailto:support@eventhive.com">support@eventhive.com</a>
+            <a href="mailto:nikshaykataria.bt23cseds@pec.edu.in"
+              >nikshaykataria.bt23cseds@pec.edu.in</a
+            >
           </p>
         </div>
       </div>
